--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "argon2": "^0.31.1",
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
