--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "express-session": "^1.17.3",
     "mysql2": "^3.6.1",
     "nodemailer": "^6.9.7",
