--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 node_modules/
-db/Programa_Delfín_bdd.xlsx
-db/load_data.py
-db/load_data_moderadores.py
-db/Moderadores.xlsx
 db/database_connection.js
+db/carga_bdd/
